--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@ It makes use of a variety of open source projects including:
     <div class="logo">
         
             <span class="logo__mark">></span>
-            <span class="logo__text">$ cd /home/keeevin</span>
+            <span class="logo__text">$ ~</span>
             <span class="logo__cursor"></span>
         
     </div>
