--- a/fr/404.html
+++ b/fr/404.html
@@ -67,7 +67,7 @@
     <div class="logo">
         
             <span class="logo__mark">></span>
-            <span class="logo__text">$ cd /home/keeevin</span>
+            <span class="logo__text">$ ~</span>
             <span class="logo__cursor"></span>
         
     </div>
