adding github photo

--- a/fr/index.html
+++ b/fr/index.html
@@ -28,7 +28,7 @@
 
 
 
-<link rel="stylesheet" href="https://keeev.in/scss/main.e7aaa44c90454e6f31c32d86e97c1bf287bd58921afb1ddc9289209d8dfd7d91.css">
+<link rel="stylesheet" href="https://keeev.in/scss/main.da7dd4f8653ffd1f72ac90422fa31df6f3c38541256269622d9578f0150c01f2.css">
 
 
 
@@ -106,6 +106,11 @@
                 
     <main aria-role="main">
         <div>
+            <div class="logo-container">
+              <a href="https://keeev.in/">
+                <img src='https://avatars0.githubusercontent.com/u/5288503?s=460&amp;v=4' alt="Profile Hey, I&#39;m Kevin" class="rounded-logo">
+              </a>
+            </div>
             <h1>Hey, I&#39;m Kevin</h1>
                 <p>I like to reinvent the wheel</p>
                 <div>
