--- a/contact/index.html
+++ b/contact/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><title>https://keeev.in/about/</title><link rel="canonical" href="https://keeev.in/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://keeev.in/about/" /></head></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>https://keeev.in/about/</title>
+    <link rel="canonical" href="https://keeev.in/about/">
+    <meta name="robots" content="noindex">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://keeev.in/about/">
+  </head>
+</html>
